--- a/app/views/abstracts/show.html.erb
+++ b/app/views/abstracts/show.html.erb
@@ -24,6 +24,12 @@
     }
 }
 
+@media only screen and (max-width: 600px) {
+  .w-slider {
+    height: 60px !important;
+  }
+}
+
 .w-slider {height: 265px;}
 
 
