--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -24,6 +24,15 @@
     }
 }
 
+@media only screen and (max-width: 600px) {
+  .w-slider {
+    height: 60px !important;
+  }
+  .w-tab-content {
+    overflow: inherit !important;
+  }
+}
+
 .w-slider {height: 265px;}
     .table-fill {
   background: white;
