--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,11 @@
 <% content_for :styles do %>
   <style type="text/css">
 
-
+@media only screen and (max-width: 600px) {
+    .w-slider {
+        height: 85px !important;
+    }
+}
 
 </style>
   
