--- a/app/views/home/dates.html.erb
+++ b/app/views/home/dates.html.erb
@@ -24,6 +24,13 @@
     }
 }
 
+
+@media only screen and (max-width: 600px) {
+  .w-slider {
+    height: 60px !important;
+  }
+}
+
 .w-slider {height: 265px;}
 .table-fill {
   background: white;
