--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../timeline.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="../webflow.js" type="text/javascript"></script>
@@ -149,7 +150,7 @@
               </div>
               <nav class="w-dropdown-list">
                 <a href="/comingup" class="dropdown-links w-dropdown-link">Campus</a>
-                <a href="/comingup" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
+                <a href="/hotels" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
               </nav>
             </div>
             
