--- a/app/views/home/eac.html.erb
+++ b/app/views/home/eac.html.erb
@@ -76,7 +76,29 @@
             </div>
           </div>
 
-          <div class="column-6 w-col w-col-6">
+                    <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../DrHChaturvedi.png" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. H Chaturvedi</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Director</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important"> BIMTECH <br></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
+
+
+        <div class="row-2 w-row">
+
+
+                    <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
                 <div class="w-col w-col-3">
@@ -89,9 +111,6 @@
               </div>
             </div>
           </div>
-
-        </div>
-        <div class="row-2 w-row">
           <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
@@ -106,6 +125,11 @@
             </div>
             </div>
 
+
+
+        </div>
+        <div class="row-2 w-row">
+
                                 <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
@@ -119,11 +143,6 @@
               </div>
             </div>
           </div>
-
-        </div>
-        <div class="row-2 w-row">
-
-
           <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
@@ -137,7 +156,16 @@
               </div>
             </div>
           </div>
-                    <div class="column-6 w-col w-col-6">
+
+
+
+
+
+
+        </div>
+        <div class="row-2 w-row">
+
+                            <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
                 <div class="w-col w-col-3">
@@ -150,10 +178,6 @@
               </div>
             </div>
           </div>
-
-
-
-
 
         </div>
       </div>
