--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -147,6 +147,59 @@ td.text-right {
 }
 
 
+     .button {
+  border-radius: 4px;
+  background-color: #3ec9cb !important;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.btn {
+    border-radius: 4px;
+  background-color: #3ec9cb !important;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
     </style>
 <%end%> 
 
@@ -249,7 +302,9 @@ td.text-right {
 </tbody>
 </table>
 
+
             </div>
+            <button id="btnSubmit" class="button" style="margin-top: 20px;float: right"><span>Make a Payment</span></button>
           </div>
         </div>
       </div>
